# quant_sandbox

./: README.md  SmaCross.html  evaluation.py  explore_indicators.ipynb  indicators.py  optimization.py  pyproject.toml  sandbox.ipynb  strategy_ma_crossover.ipynb  utils.py
data/: SPY_20150101_20250801.csv  USDEUR=X_20100101_20250801.csv  VWRL.AS_20150101_20250801.csv
