[project]
name = "quant-sandbox"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "backtesting>=0.6.5",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.1",
    "setuptools>=80.9.0",
    "tqdm>=4.67.1",
    "yfinance>=0.2.65",
]
